# little-conf

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  policy.yml  pyproject.toml  setup.cfg
examples/: example_reload_on_sighup.py  simple_app.py
examples/config/: __init__.py  base.yaml  local.yaml  prod.yaml
little_conf/: __init__.py  lc.py
little_conf/template_settings/: __init__.py  base.py  database.py  redis.py  s3.py
tests/: test_simple.py
tests/conf/: local.yaml
